# iocx

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
iocx/: .gitignore  pyproject.toml
iocx/src/iocx/: cli.py  config.py  extract.py  sources.py
iocx/tests/: test_iocx.py
src/iocx/: __init__.py  cli.py  decode.py  extract.py  output.py  reporter.py  ui.py
src/iocx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
