[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "iocx"
version = "0.1.0"
description = "IOC triage at terminal speed — IP, hash, domain, URL lookup across multiple threat intel sources"
authors = [{ name = "Nervi0z", email = "nervi0z@users.noreply.github.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["security", "threat-intel", "soc", "ioc", "blue-team", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "black>=24.0",
    "flake8>=7.0",
]

[project.scripts]
iocx = "iocx.cli:main"

[project.urls]
Homepage = "https://github.com/Nervi0z/iocx"
"Bug Tracker" = "https://github.com/Nervi0z/iocx/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]
